WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122320
AX: WebKit needs heuristics to differentiate lists used for layout from semantic data lists, similar to the heuristics for layout tables versus data tables.
https://bugs.webkit.org/show_bug.cgi?id=122320
Summary
AX: WebKit needs heuristics to differentiate lists used for layout from seman...
James Craig
Reported
2013-10-04 00:36:36 PDT
AX: WebKit needs heuristics to differentiate lists used for layout from semantic data lists, similar to the heuristics for layout tables versus data tables, and weeding out spacer images. Extra lists cause VoiceOver to speak stuff like "list, one item" and sometime group things erroneously or speak labels twice. Some potential criteria: 1. If it uses ARIA roles, keep it as a semantic list. 2. If it displays generated list markers (like bullets or numbers), keep it as a semantic list. 3. If it contains well-formed nested lists, assume they are all semantic lists. 4. If the list only contains a single item, presume it's a layout list. 7. If it ~acts like a large scale container (e.g. contains a large amount of distinct content elements), assume it's a layout list. (This will be the tricky one.) More…
Attachments
patch
(11.10 KB, patch)
2014-02-13 18:00 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(11.09 KB, patch)
2014-02-13 18:10 PST
,
chris fleizach
mario
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2
(487.55 KB, application/zip)
2014-02-13 19:32 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion
(487.25 KB, application/zip)
2014-02-14 01:44 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion
(536.55 KB, application/zip)
2014-02-14 02:29 PST
,
Build Bot
no flags
Details
patch for EWS
(11.59 KB, patch)
2014-02-14 08:58 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-10-04 00:37:07 PDT
<
rdar://problem/15150097
>
chris fleizach
Comment 2
2014-02-13 18:00:01 PST
Created
attachment 224138
[details]
patch
WebKit Commit Bot
Comment 3
2014-02-13 18:01:48 PST
Attachment 224138
[details]
did not pass style-queue: ERROR: Source/WebCore/accessibility/AccessibilityList.cpp:149: An else should appear on the same line as the preceding } [whitespace/newline] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 4
2014-02-13 18:10:15 PST
Created
attachment 224140
[details]
patch
Build Bot
Comment 5
2014-02-13 19:32:32 PST
Comment on
attachment 224140
[details]
patch
Attachment 224140
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6052477241655296
New failing tests: accessibility/aria-roles.html
Build Bot
Comment 6
2014-02-13 19:32:35 PST
Created
attachment 224146
[details]
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-13 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 7
2014-02-14 01:44:24 PST
Comment on
attachment 224140
[details]
patch
Attachment 224140
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5354837650702336
New failing tests: accessibility/aria-roles.html
Build Bot
Comment 8
2014-02-14 01:44:27 PST
Created
attachment 224179
[details]
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Mario Sanchez Prada
Comment 9
2014-02-14 02:26:26 PST
Comment on
attachment 224140
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=224140&action=review
The change looks good to me. My only comments/suggestions is to remove the PLATFORM(MAC) guard and make the tests cross platform, since I believe this is a change other ports can benefit of as well. As for the failing tests in the Mac EWS, it seems to me that the problem is that the test aria-roles.html needs to be changed because the following snippet does not match the heuristic to determine that something is a list: <!--List--> <div class="newRole"> <p>The following should be a list:</p> <p><span tabindex="0" role="list" id="ariaList">X</span></p> <p>Actual list:</p> <ul id="realList"> <li>Broccoli</li> <li>Beets</li> </ul> <span id="resultList"></span> <script> validateRole(document.getElementById('ariaList'), document.getElementById('realList'), document.getElementById('resultList')); </script> </div> The problem is that <span tabindex="0" role="list" id="ariaList">X</span> is no longer going to be identified as a list so I'd say either this whole snippet of code should be removed (it's tested anyway by list-detection.html, and in a better way) or adapted. But other than that I think the patch is fine. Setting r+ anyway, but please consider these comments before landing
> Source/WebCore/accessibility/AccessibilityList.cpp:120 > +#if PLATFORM(MAC)
I think this change could be done as a cross-platform one
> LayoutTests/ChangeLog:9 > + * platform/mac/accessibility/list-detection-expected.txt: Added. > + * platform/mac/accessibility/list-detection.html: Added.
This tests could be moved up to LayoutTests/accessibility if the change is made cross platform
Build Bot
Comment 10
2014-02-14 02:29:18 PST
Comment on
attachment 224140
[details]
patch
Attachment 224140
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/4667337135357952
New failing tests: accessibility/aria-roles.html
Build Bot
Comment 11
2014-02-14 02:29:20 PST
Created
attachment 224184
[details]
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.5
chris fleizach
Comment 12
2014-02-14 08:43:03 PST
(In reply to
comment #9
)
> (From update of
attachment 224140
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=224140&action=review
Thanks. Will take care of these suggestions.
chris fleizach
Comment 13
2014-02-14 08:58:25 PST
Created
attachment 224220
[details]
patch for EWS
chris fleizach
Comment 14
2014-02-14 09:47:52 PST
http://trac.webkit.org/changeset/164107
James Craig
Comment 15
2023-10-24 14:45:03 PDT
The original test case is here:
https://bug-134187-attachments.webkit.org/attachment.cgi?id=233587
Posting here in case I follow a git blame here again.
James Craig
Comment 16
2026-02-23 16:58:42 PST
For those of you who land here because of a closed duplicate, this is by design based on user feedback and much discussion. There's a longer explanation here which appeases most readers, but unfortunately you now need to login to see the whole Twitter thread:
https://x.com/cookiecrook/status/1337226933822603270
The short version is that WebKit is prioritizing AT users over web authors as recommended by the Web Platform Priorities of Constituencies and Design Principles, but I encourage you to read the whole thread if you have questions. There are ongoing discussions in ARIA about standardizing and testing heuristics, but for now, this one is left as an implementation detail and so behaves correctly.
James Craig
Comment 17
2026-02-23 16:59:55 PST
***
Bug 304137
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug